test/depCond6_2.slq
def foo(x:ğ”¹,const cond:ğ”¹){
	y:=dup(x);
	z:=0;
	if cond{
		y:=y;
		forget(y); /// error
	}else{
		x:=H(x);
		z=y;
	}
	return (x,z);
}
